--- a/ini-com.conf
+++ b/ini-com.conf
@@ -54,10 +54,21 @@ server {
     location /v1/presence {
       add_header 'Access-Control-Allow-Origin' '*' always;
       add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-	add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control-Content-Type,Range' always;
-	add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
-	proxy_set_header X-Forwarded-For $remote_addr;
-	proxy_pass http://localhost:3000;
+	  add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control-Content-Type,Range' always;
+	  add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+	  proxy_set_header X-Forwarded-For $remote_addr;
+	  proxy_pass http://localhost:3000;
+    }
+    location ~ (/v1/img|/v1/img.png) {
+      add_header Last-Modified $date_gmt;
+      add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      add_header Content-Type image/png;
+    #   add_header Expires $date_gmt;
+      if_modified_since off;
+      expires off;
+      etag off;
+	  proxy_set_header X-Forwarded-For $remote_addr;
+	  proxy_pass http://localhost:3000;
     }
 
     ssl_certificate /etc/ssl/website/domain.cert.pem;
@@ -83,6 +94,23 @@ server {
 	  proxy_set_header X-Forwarded-For $remote_addr;
 	  proxy_pass http://main_website/;
     }
+
+    # location /api/img {
+    #   add_header Last-Modified $date_gmt;
+    #   add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+    #   add_header Content-Type image/png;
+    #   if_modified_since off;
+    #   expires off;
+    #   etag off;
+    #   add_header 'Access-Control-Allow-Origin' '*' always;
+    #   add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    #   add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control-Content-Type,Range' always;
+    #   add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+	#   proxy_set_header X-Forwarded-For $remote_addr;
+	#   proxy_pass http://main_website;
+    # }
+
+
     location ~ (img/years.png|img/seconds.png|img/minutes.png|img/hours.png|img/days.png|img/months.png|img/weeks.png) {
         add_header Last-Modified $date_gmt;
         add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
@@ -91,6 +119,8 @@ server {
         expires off;
         etag off;
     }
+
+
     ssl_certificate /etc/ssl/website/domain.cert.pem;
     ssl_certificate_key /etc/ssl/website/private.key.pem;
     ssl_trusted_certificate /etc/ssl/website/intermediate.cert.pem;
