--- a/package.json
+++ b/package.json
@@ -3,33 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ramonak/react-progress-bar": "^4.4.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
+    "@ramonak/react-progress-bar": "^5.0.2",
     "canvas-confetti": "^1.5.1",
-    "history": "^5.3.0",
-    "jquery": "^3.6.0",
-    "moment": "^2.29.4",
-    "pretty-ms": "^7.0.1",
-    "react": "^18.2.0",
+    "chalk": "^5.0.1",
+    "express": "^4.18.1",
+    "jimp": "^0.16.1",
+    "jquery": "^3.6.1",
+    "pretty-ms": "^8.0.0",
+    "quick.db": "^9.0.6",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-responsive": "^9.0.0-beta.6",
-    "react-router": "^6.2.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tooltip": "^4.2.21",
-    "uniqid": "^5.4.0",
-    "web-vitals": "^2.1.4"
+    "socket.io": "^4.5.1",
+    "web-vitals": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "upload": "react-scripts build && scp -r build/ root@inimicalpart.com:'/var/www/website/' && ssh root@inimicalpart.com sudo service inimicalpart.com restart"
+    "upload": "react-scripts build && ssh root@inimicalpart.com sudo service inimicalpart.com stop && ssh root@inimicalpart.com sudo rm /var/www/website/build -rf && scp -r build/ root@inimicalpart.com:'/var/www/website/' && ssh root@inimicalpart.com sudo service inimicalpart.com restart"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "type": "module"
 }
