--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -19,7 +19,6 @@ jobs:
           base: ""
           config_timezone: Europe/Sweden
           plugin_screenshot: yes
-          plugin_screenshot_background: yes
-          plugin_screenshot_selector: body
+          plugin_screenshot_selector: html
           plugin_screenshot_title: InimicalPart.com
           plugin_screenshot_url: https://inimicalpart.com
