--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -20,6 +20,6 @@ jobs:
           config_timezone: Europe/Sweden
           plugin_screenshot: yes
           plugin_screenshot_background: yes
-          plugin_screenshot_selector: html
+          plugin_screenshot_selector: "#introduction"
           plugin_screenshot_title: InimicalPart.com
           plugin_screenshot_url: https://inimicalpart.com
