--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -9,9 +9,10 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: swinton/screenshot-website@v1.x
+      - name: inimicalpart.com screenshot
+        uses: "lannonbr/puppeteer-screenshot-action@1.0.0"
         with:
-          source: https://inimicalpart.com
-          destination: site.screenshot.png
-          full-page: true
+          url: https://github.com
+          screenshotName: site.screenshot.png
+          fullPage: true
   
