--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -10,9 +10,8 @@ jobs:
       contents: write
     steps:
       - name: inimicalpart.com screenshot
-        uses: "lannonbr/puppeteer-screenshot-action@1.0.0"
+        uses: swinton/screenshot-website@v1.0.0
         with:
-          url: https://github.com
-          screenshotName: site.screenshot.png
-          fullPage: true
+          source: https://inimicalpart.com 
+          destination: site.screenshot.png
   
