--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -9,9 +9,17 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: inimicalpart.com screenshot
-        uses: swinton/screenshot-website@v1.0.0
+      - uses: lowlighter/metrics@latest
         with:
-          source: https://inimicalpart.com 
-          destination: site.screenshot.png
-  
+          filename: site.screenshot.svg
+          token: NOT_NEEDED
+
+          # Options
+          template: classic
+          base: ""
+          config_timezone: Europe/Sweden
+          plugin_screenshot: yes
+          plugin_screenshot_background: yes
+          plugin_screenshot_selector: body
+          plugin_screenshot_title: Screenshot
+          plugin_screenshot_url: https://inimicalpart.com  
