--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -19,6 +19,5 @@ jobs:
           base: ""
           plugin_screenshot: yes
           plugin_screenshot_background: yes
-          plugin_screenshot_selector: body
-          plugin_screenshot_title: Screenshot
+          plugin_screenshot_title: inimicalpart.com
           plugin_screenshot_url: https://inimicalpart.com  
