--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -20,3 +20,4 @@ jobs:
           plugin_pagespeed: yes
           plugin_pagespeed_screenshot: yes
           plugin_pagespeed_url: https://inimicalpart.com
+          plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
