--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -15,9 +15,15 @@ jobs:
           token: NOT_NEEDED
 
           # Options
-          template: classic
+          template: terminal
           base: ""
+          plugin_screenshot: yes
+          plugin_screenshot_background: yes
+          plugin_screenshot_selector: body
+          plugin_screenshot.viewport: |
+            {"width":962, "height":136}
+          plugin_screenshot_title: Inimicalpart.com
+          plugin_screenshot_url: https://inimicalpart.com
           plugin_pagespeed: yes
-          plugin_pagespeed_screenshot: yes
           plugin_pagespeed_url: https://inimicalpart.com
           plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
