--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -9,7 +9,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@master
         with:
           filename: site.screenshot.svg
           token: NOT_NEEDED
@@ -18,8 +18,6 @@ jobs:
           template: terminal
           base: ""
           plugin_screenshot: yes
-          plugin_screenshot_wait: 5000
-          plugin_screenshot_background: yes
           plugin_screenshot.viewport: |
             {"width":962, "height":136}
           plugin_screenshot_title: Inimicalpart.com
