--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -15,7 +15,7 @@ jobs:
           token: NOT_NEEDED
 
           # Options
-          template: terminal
+          template: classic
           base: ""
           plugin_screenshot: yes
           plugin_screenshot.viewport: |
