--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "inimicalpart.com",
-	"version": "0.0.1",
+	"version": "1,0,0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -34,17 +34,21 @@
 		"eslint-config-next": "14.2.1",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"moment-timezone": "^0.5.45",
 		"next": "^14.2.3",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.38",
+		"pretty-ms": "^9.0.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"sharp": "^0.33.4",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.3",
+		"to-words": "^4.0.1",
 		"typescript": "5.0.4"
 	},
 	"devDependencies": {
-		"@types/canvas-confetti": "^1.6.4"
+		"@types/canvas-confetti": "^1.6.4",
+		"@types/number-to-words": "^1.2.3"
 	}
 }
