--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@auth/mongodb-adapter": "^3.2.0",
 		"@nextui-org/button": "^2.0.31",
 		"@nextui-org/code": "^2.0.27",
 		"@nextui-org/input": "^2.1.21",
@@ -23,32 +24,48 @@
 		"@nextui-org/tooltip": "^2.0.33",
 		"@react-aria/ssr": "^3.9.4",
 		"@react-aria/visually-hidden": "^3.8.12",
-		"@types/node": "20.5.7",
-		"@types/react": "18.2.21",
-		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.19",
 		"canvas-confetti": "^1.9.3",
 		"clsx": "^2.0.0",
 		"dayjs": "^1.11.11",
-		"eslint": "8.48.0",
+		"dompurify": "^3.1.5",
+		"eslint": "^8.48.0",
 		"eslint-config-next": "14.2.1",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"jsdom": "^24.1.0",
 		"moment-timezone": "^0.5.45",
+		"mongodb": "^6.7.0",
 		"next": "^14.2.3",
+		"next-auth": "^5.0.0-beta.19",
 		"next-themes": "^0.2.1",
+		"next-ws": "^1.0.1",
+		"node-ipc": "^10.1.0",
 		"postcss": "8.4.38",
 		"pretty-ms": "^9.0.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"remark": "^15.0.1",
+		"remark-html": "^16.0.1",
 		"sharp": "^0.33.4",
+		"showdown": "^2.1.0",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.3",
 		"to-words": "^4.0.1",
-		"typescript": "5.0.4"
+		"typescript": "^5.4.5",
+		"ws": "^8.17.1"
 	},
 	"devDependencies": {
 		"@types/canvas-confetti": "^1.6.4",
-		"@types/number-to-words": "^1.2.3"
+		"@types/dompurify": "^3.0.5",
+		"@types/jsdom": "^21.1.7",
+		"@types/node": "^20.14.2",
+		"@types/node-ipc": "^9.2.3",
+		"@types/number-to-words": "^1.2.3",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@types/showdown": "^2.0.6",
+		"@types/ws": "^8.5.10",
+		"tailwind-scrollbar": "^3.1.0"
 	}
 }
