Fixed login issue and made appeal website work as intended
Future plans: Attempt real-time updates using WebSockets

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,2 @@
-AUTH_DISCORD_ID="0123456789012345678"
-AUTH_DISCORD_SECRET="4BCD3F-GH1J2KLMNOP3QRSTUVWXYZ"
-AUTH_SECRET="ebgewrG939wCFiwifnCwne322FkvrKoemnfd="
-MONGODB_URI="mongodb://username:pasword@website.com:27017/NextAuth?authSource=admin&tls=true&family=4"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_4BCD3FGH1JK7MN0PQR57UVWXYZ
+CLERK_SECRET_KEY=sk_live_4BCD3FGH1JK7MN0PQR57UVWXYZ1234567890
