--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@auth/mongodb-adapter": "^3.2.0",
+		"@clerk/nextjs": "^5.2.14",
 		"@nextui-org/button": "^2.0.31",
 		"@nextui-org/code": "^2.0.27",
 		"@nextui-org/input": "^2.1.21",
@@ -35,11 +36,9 @@
 		"intl-messageformat": "^10.5.0",
 		"jsdom": "^24.1.0",
 		"moment-timezone": "^0.5.45",
-		"mongodb": "^6.7.0",
+		"mongodb": "^6.8.0",
 		"next": "^14.2.3",
-		"next-auth": "^5.0.0-beta.19",
 		"next-themes": "^0.2.1",
-		"next-ws": "^1.0.1",
 		"node-ipc": "^10.1.0",
 		"postcss": "8.4.38",
 		"pretty-ms": "^9.0.0",
@@ -52,14 +51,14 @@
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.3",
 		"to-words": "^4.0.1",
-		"typescript": "^5.4.5",
+		"typescript": "^5.5.3",
 		"ws": "^8.17.1"
 	},
 	"devDependencies": {
 		"@types/canvas-confetti": "^1.6.4",
 		"@types/dompurify": "^3.0.5",
 		"@types/jsdom": "^21.1.7",
-		"@types/node": "^20.14.2",
+		"@types/node": "^20.14.9",
 		"@types/node-ipc": "^9.2.3",
 		"@types/number-to-words": "^1.2.3",
 		"@types/react": "^18.3.3",
