--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
 		"jsdom": "^24.1.0",
 		"moment-timezone": "^0.5.45",
 		"mongodb": "^6.8.0",
-		"next": "^14.2.3",
+		"next": "14.2.4",
 		"next-themes": "^0.2.1",
+		"next-ws": "^1.1.1",
 		"node-ipc": "^10.1.0",
 		"postcss": "8.4.38",
 		"pretty-ms": "^9.0.0",
@@ -48,11 +49,13 @@
 		"remark-html": "^16.0.1",
 		"sharp": "^0.33.4",
 		"showdown": "^2.1.0",
+		"socket.io": "^4.7.5",
+		"socket.io-client": "^4.7.5",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.3",
 		"to-words": "^4.0.1",
 		"typescript": "^5.5.3",
-		"ws": "^8.17.1"
+		"ws": "^8.18.0"
 	},
 	"devDependencies": {
 		"@types/canvas-confetti": "^1.6.4",
