--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@nextui-org/tooltip": "^2.0.33",
 		"@react-aria/ssr": "^3.9.4",
 		"@react-aria/visually-hidden": "^3.8.12",
+		"autoprefixer": "^10.4.20",
 		"canvas-confetti": "^1.9.3",
 		"clsx": "^2.0.0",
 		"dayjs": "^1.11.11",
@@ -28,12 +29,14 @@
 		"eslint": "^8.48.0",
 		"eslint-config-next": "14.2.1",
 		"framer-motion": "^11.1.1",
+		"intl-messageformat": "^10.5.14",
 		"jsdom": "^24.1.0",
 		"moment-timezone": "^0.5.45",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"next-ws": "^1.1.1",
 		"node-ipc": "^10.1.0",
+		"postcss": "^8.4.41",
 		"pretty-ms": "^9.0.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
